2007-10-18  Lillian Angel  <langel@redhat.com>

	* README: Updated.

2007-10-16  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-paths.patch: Add Classpath copyright notice.

2007-10-15  Lillian Angel  <langel@redhat.com>

	* INSTALL: Added info about installing old IcedTea.

2007-10-15  Lillian Angel  <langel@redhat.com>

	* README: Updated license section.

2007-10-15  Matthias Klose  <doko@ubuntu.com>

	* gcjwebplugin.cc: Change PLUGIN_NAME.

2007-10-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (OPENJDK_VERSION): Update for b22.
	(OPENJDK_DATE): Likewise.
	(OPENJDK_MD5SUM): Likewise.
	(ICEDTEA_PATCHES): Remove patches/icedtea-xinerama.patch.  Add
	patches/icedtea-xjc.patch.
	(OPENJDK_SOURCEPATH_DIRS): Add openjdk/jaxp/src/share/classes.
	(stamps/extract.stamp): Remove openjdk/jaxws.
	(ICEDTEA_ENV): Fix ANT_HOME, BUILD_NUMBER, JRE_RELEASE_VERSION,
	and HOTSPOT_RELEASE_VERSION.  Add ALT_JDK_IMPORT_PATH.
	* Makefile.in: Regenerate.
	* patches/icedtea-xinerama.patch: Remove file.
	* patches/icedtea-xjc.patch: New file.
	* patches/icedtea-ant.patch: Update for b22.
	* patches/icedtea-certbundle.patch: Likewise.
	* patches/icedtea-copy-plugs.patch: Likewise.
	* patches/icedtea-debuginfo.patch: Likewise.
	* patches/icedtea-license-headers.patch: Likewise.
	* patches/icedtea-memory-limits.patch: Likewise.
	* patches/icedtea-paths.patch: Likewise.
	* patches/icedtea-plugin.patch: Likewise.
	* patches/icedtea-speed.patch: Likewise.
	* patches/icedtea-use-system-tzdata.patch: Likewise.
	* patches/icedtea-xinerama.patch: Likewise.

2007-10-12  Lillian Angel  <langel@redhat.com>
	
	* NEWS: Updated for 1.4.

2007-10-12  Andrew Haley  <aph@redhat.com>

	* README (Java compatibility): New section.

2007-10-11  Lillian Angel  <langel@redhat.com>

	* README: Updated license section. jvmtiLib.xsl was fixed in b21.

2007-10-11  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-license-headers.patch: Re-added genExceptions patch.
